Fix long "words" not wrapping in search result headers (4294)

--- a/css/search/styles.less
+++ b/css/search/styles.less
@@ -162,6 +162,7 @@
 
 		h5 {
 			min-height:35px;
+			word-wrap: break-word;
 		}
 
 	}
